--- a/erpnext/hr/doctype/appraisal/appraisal.json
+++ b/erpnext/hr/doctype/appraisal/appraisal.json
@@ -58,7 +58,7 @@
    "fieldtype": "Link",
    "in_global_search": 1,
    "in_standard_filter": 1,
-   "label": "For Employee",
+   "label": "For Teacher",
    "oldfieldname": "employee",
    "oldfieldtype": "Link",
    "options": "Employee",
@@ -70,7 +70,7 @@
    "fieldname": "employee_name",
    "fieldtype": "Data",
    "in_global_search": 1,
-   "label": "For Employee Name",
+   "label": "For Teacher Name",
    "oldfieldname": "employee_name",
    "oldfieldtype": "Data",
    "read_only": 1
@@ -201,7 +201,7 @@
  "index_web_pages_for_search": 1,
  "is_submittable": 1,
  "links": [],
- "modified": "2020-10-03 21:48:33.297065",
+ "modified": "2021-11-11 19:22:16.348086",
  "modified_by": "Administrator",
  "module": "HR",
  "name": "Appraisal",
